@@ -4,6 +4,8 @@ NOTE: This is the 1.3.X development branch.  Put code changes right
 below the 1.3.0+CVS label below.
 
 Version 1.3.0+CVS (?? ??? 2007)
+ - Remove menu for modifying nonuser/public prefs when neither is enabled
+ - Fixed bug [ 1909554 ] Public access override event name broken
  - Display category icons in upcoming.php; new corresponding system setting
  - Added new RSS feed for Activity Log
  - Removed old hack for register_globals work-around that is no longer
